tests/NormalTests/paczka1/fuzzy1/29913863.err
Error in line 2: RW21GZS2ZG A434 55,4
Error in line 5: S579 S579 67,0
Error in line 16: S579 S981 28,9
Error in line 21: RW21GZS2ZG A648 6,0
Error in line 25: RW21GZS2ZG S981 8,0
Error in line 29: RW21GZS2ZG A648 88,2
Error in line 6: 5lXPdLY4g2 S579 29,7
Error in line 20: 2Qdepr4YEv8 A434 21,4
